TBBA-270 further button styling, fix for misaligned batch table columns

--- a/app/styles/batch.scss
+++ b/app/styles/batch.scss
@@ -14,12 +14,6 @@ select.template-name{min-width:180px;}
 .sca-batch-table .table-full tbody > tr > td {
     padding-bottom: 5px;
 }
-.sca-batch-table tbody > tr:nth-of-type(even)> td {
-    border-right: 5px solid #fff;
-}
-.sca-batch-table tbody > tr:nth-of-type(even)> td {
-    border-right: 5px solid #f9f9f9;
-}
 .sca-batch-table .editable-input {
     vertical-align : top;
     box-shadow: none;
