--- a/app/styles/ihtsdo.scss
+++ b/app/styles/ihtsdo.scss
@@ -1714,7 +1714,6 @@ button.btn.btn-default.transparent,
 .btn:hover {
     -webkit-box-shadow: none;
     box-shadow: none;
-    background-color: #FFF;
     border-color: transparent;
 }
 .checkbox input[type=checkbox]:disabled:after,
